--- a/src/style/_constants.scss
+++ b/src/style/_constants.scss
@@ -13,10 +13,13 @@ $color-grey-dark-2: #6d5d4b;
 
 $warning-color: red;
 
+$blue-color: #337AB7;
+$green-color: #5CB85C;
+$gold-color: #F0AD4E;
+
 // shadow
 $primary-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 $secondary-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.15);
 
 // transition
 $base-transition: all 0.2s;
-
