--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,3 +4,4 @@
 @import "./components/header";
 @import "./components/product-card";
 @import "./components/UI/button";
+@import "./components/UI/icon";
