add small images with lazy loading

--- a/src/style/components/_product-card.scss
+++ b/src/style/components/_product-card.scss
@@ -17,6 +17,7 @@
     text-transform: capitalize;
     display: flex;
     justify-content: center;
+    z-index: 10;
 
     &-blue {
       background-color: $blue-color;
