--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,3 +5,4 @@
 @import "./components/product-card";
 @import "./components/UI/button";
 @import "./components/UI/icon";
+@import "./components/UI/img-loader";
