--- a/src/style/components/UI/_button.scss
+++ b/src/style/components/UI/_button.scss
@@ -1,7 +1,7 @@
 .button {
   font-size: 1.4rem;
   background-color: $color-primary;
-  color: $color-secondary;
+  color: $color-grey-light-1;
   padding: 1rem 2rem;
   font-weight: 600;
   border-radius: 5px;
