--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -9,6 +9,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; /* 10px */
+  @media only screen and (max-width: 75em) {
+    font-size: 56.25%; /* 9px */
+  }
 }
 
 body {
